--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "jest": {
     "verbose": false,
     "scriptPreprocessor": "./test/setup.js",
-    "coveragePathIgnorePatterns": ["/node_modules/", "\\.s?css$"]
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "\\.s?css$"
+    ]
   },
   "keywords": [
     "design",
@@ -39,7 +42,6 @@
     "chalk": "^1.1.3",
     "coveralls": "^2.11.12",
     "css-loader": "^0.25.0",
-    "css-modules-require-hook": "^4.0.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
