--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --no-cache --coverage",
     "dev": "babel-node ./scripts/dev",
+    "lint": "eslint src",
     "coveralls": "cat coverage/lcov.info | coveralls"
   },
   "jest": {
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-eslint": "^6.1.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.1",
     "babel-jest": "^15.0.0",
     "babel-loader": "^6.2.5",
@@ -42,6 +44,8 @@
     "chalk": "^1.1.3",
     "coveralls": "^2.11.12",
     "css-loader": "^0.25.0",
+    "eslint": "^3.5.0",
+    "eslint-plugin-import": "^1.14.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
