jest 1. add `moduleNameMapper` and `setupFiles` 2. add mock-loader

--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "jest": {
     "verbose": false,
+    "moduleNameMapper": {
+      "^.+\\.(sc?ss|svg|png|jpg|gif)$": "<rootDir>/test/mock-loader"
+    },
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "\\.s?css$"
+    ],
+    "setupFiles": [
+      "./test/setup.js"
     ]
   },
   "keywords": [
