--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cepave OWL UI Components for VueJS 2.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --no-cache --coverage",
+    "test": "npm run lint && jest src/ --no-cache --coverage",
     "dev": "babel-node ./scripts/dev",
     "lint": "eslint src & stylelint src/**/*.scss --syntax scss",
     "coveralls": "cat coverage/lcov.info | coveralls"
