--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "isomorphic-style-loader": "^1.0.0",
     "jest-cli": "^15.1.1",
     "node-sass": "^3.10.0",
+    "normalize.css": "^4.2.0",
     "piping": "^1.0.0-rc.3",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
