--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "vue-owl-ui",
   "version": "0.1.0",
   "description": "Cepave OWL UI Components for VueJS 2.0",
-  "main": "index.js",
+  "main": "./dist/owl-ui",
   "scripts": {
     "start": "babel-node scripts/start",
     "test": "npm run lint && jest src/ --no-cache --coverage",
     "dev": "babel-node ./scripts/dev",
-    "build": "NODE_ENV=production webpack --progress",
+    "build": "npm run build.ui & npm run build.demo",
+    "build.ui": "NODE_ENV=build webpack --progress && babel-node ./scripts/build.ui",
+    "build.demo": "NODE_ENV=production webpack --progress",
     "lint": "eslint src & stylelint src/**/*.scss --syntax scss",
     "coveralls": "cat coverage/lcov.info | coveralls"
   },
@@ -51,11 +53,15 @@
     "chalk": "^1.1.3",
     "coveralls": "^2.11.13",
     "css-loader": "^0.25.0",
+    "del": "^2.2.2",
     "eslint": "^3.5.0",
     "eslint-plugin-import": "^1.15.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.12",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-style-loader": "^1.0.0",
     "jest-cli": "^15.1.1",
