--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "npm run lint && jest src/ --no-cache --coverage",
     "dev": "babel-node ./scripts/dev",
     "build": "npm run build.ui & npm run build.demo",
-    "build.ui": "NODE_ENV=build webpack --progress && babel-node ./scripts/build.ui",
-    "build.demo": "NODE_ENV=production webpack --progress",
+    "build.ui": "NODE_ENV=build webpack --progress --config webpack/client && babel-node ./scripts/build.ui",
+    "build.demo": "NODE_ENV=production webpack --progress --config webpack/client",
     "lint": "eslint src & stylelint src/**/*.scss --syntax scss",
     "coveralls": "cat coverage/lcov.info | coveralls"
   },
@@ -44,14 +44,13 @@
     "babel-cli": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.1",
-    "babel-jest": "^15.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-syntax-jsx": "^6.13.0",
     "babel-plugin-transform-vue-jsx": "^3.1.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-2": "^6.13.0",
     "chalk": "^1.1.3",
-    "coveralls": "^2.11.13",
+    "coveralls": "^2.11.14",
     "css-loader": "^0.25.0",
     "del": "^2.2.2",
     "eslint": "^3.5.0",
@@ -70,11 +69,11 @@
     "piping": "^1.0.0-rc.3",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.2.0",
+    "stylelint": "^7.3.1",
     "vue-router": "^2.0.0-rc.5",
     "vue-server-renderer": "^2.0.0-rc.6",
-    "webpack": "^2.1.0-beta.22",
-    "webpack-dev-middleware": "^1.7.0",
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-middleware": "^1.8.1",
     "webpack-hot-middleware": "^2.12.2"
   },
   "repository": {
