[doc] Add `mark-it-down` and markdown component for parser markdown syntax

--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-style-loader": "^1.0.0",
     "jest-cli": "^15.1.1",
-    "node-sass": "^3.10.1",
+    "mark-it-down": "^0.2.2",
     "normalize.css": "^4.2.0",
     "piping": "^1.0.0-rc.3",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.3.1",
