--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "license": "MIT",
   "dependencies": {
     "delegate-to": "^0.1.2",
-    "vue": "^2.0.0-rc.8"
+    "vue": "^2.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -70,8 +70,8 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.3.1",
-    "vue-router": "^2.0.0-rc.7",
-    "vue-server-renderer": "^2.0.0-rc.8",
+    "vue-router": "^2.0.0",
+    "vue-server-renderer": "^2.0.1",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-middleware": "^1.8.1",
     "webpack-hot-middleware": "^2.12.2"
