--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pack.client": "webpack --progress --colors --config webpack/client",
     "build": "npm run build.ui & npm run build.demo",
     "build.ui": "babel-node ./scripts/build.ui",
+    "build.svg": "babel-node ./scripts/build.svg",
     "build.demo": "NODE_ENV=production npm run pack.client",
     "lint": "eslint src & stylelint src/**/*.scss --syntax scss",
     "coveralls": "cat coverage/lcov.info | coveralls"
@@ -57,8 +58,13 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
+    "gulp-cheerio": "^0.6.2",
     "gulp-clean-css": "^2.0.12",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-size": "^2.1.0",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^2.0.0",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-style-loader": "^1.0.0",
