--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
+    "cash-dom": "^1.3.4",
     "chalk": "^1.1.3",
     "coveralls": "^2.11.14",
     "css-loader": "^0.25.0",
