--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "license": "MIT",
   "dependencies": {
     "delegate-to": "^0.1.2",
+    "owl-icons": "github:cepave-f2e/owl-icons",
     "vue": "^2.0.2"
   },
   "devDependencies": {
