--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev.ssr": "babel-node ./scripts/dev.ssr",
     "pack.client": "webpack --progress --colors --config webpack/client",
     "build": "npm run build.ui & npm run build.demo",
-    "build.ui": "NODE_ENV=build webpack --progress --config webpack/client && babel-node ./scripts/build.ui",
-    "build.demo": "NODE_ENV=production webpack --progress --config webpack/client",
+    "build.ui": "babel-node ./scripts/build.ui",
+    "build.demo": "NODE_ENV=production npm run pack.client",
     "lint": "eslint src & stylelint src/**/*.scss --syntax scss",
     "coveralls": "cat coverage/lcov.info | coveralls"
   },
@@ -62,6 +62,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-rename": "^1.2.2",
+    "gulp-size": "^2.1.0",
     "gulp-uglify": "^2.0.0",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-style-loader": "^1.0.0",
