Update jest configuration   - add `collectCoverageFrom`   - closed issue #23

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     ],
     "setupFiles": [
       "./test/setup.js"
+    ],
+    "collectCoverageFrom": [
+      "src/components/*/index.js"
     ]
   },
   "keywords": [
