--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "normalize.css": "^5.0.0",
     "piping": "^1.0.0-rc.3",
     "raw-loader": "^0.5.1",
+    "remark-cli": "^2.0.0",
+    "remark-lint": "^5.1.0",
+    "remark-preset-lint-recommended": "^1.0.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.3.1",
