--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/owl-ui",
   "scripts": {
     "start": "babel-node scripts/start",
-    "test": "npm run lint && BABEL_DISABLE_CACHE=1 jest src/ --no-cache --coverage",
+    "test": "npm run lint && BABEL_DISABLE_CACHE=1 jest --coverage",
     "dev": "babel-node ./scripts/dev",
     "dev.ssr": "babel-node ./scripts/dev.ssr",
     "pack.client": "webpack --progress --colors --config webpack/client",
@@ -46,7 +46,7 @@
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-jest": "^16.0.0",
+    "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.7",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.1.2",
@@ -70,7 +70,7 @@
     "gulp-uglify": "^2.0.0",
     "html-webpack-plugin": "^2.24.1",
     "isomorphic-style-loader": "^1.1.0",
-    "jest-cli": "^16.0.2",
+    "jest-cli": "^17.0.2",
     "mark-it-down": "^0.3.0",
     "node-sass": "^3.11.2",
     "normalize.css": "^5.0.0",
