--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "stylelint": "^7.5.0",
     "vue-router": "^2.0.2",
     "vue-server-renderer": "^2.0.5",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
   },
