Added GitHub publish script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build.ui": "babel-node ./scripts/build.ui",
     "build.demo": "NODE_ENV=production npm run pack.client",
     "lint": "eslint src & stylelint src/**/*.scss --syntax scss",
-    "coveralls": "cat coverage/lcov.info | coveralls"
+    "coveralls": "cat coverage/lcov.info | coveralls",
+    "publish": "babel-node ./scripts/github-publish"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
