--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "del": "^2.2.2",
     "eslint": "^3.10.2",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.7.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
