--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.6.0",
+    "url-loader": "^0.5.7",
     "vue-router": "^2.0.3",
     "vue-server-renderer": "^2.1.3",
     "webpack": "2.1.0-beta.25",
