--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "cash-dom": "^1.3.5",
     "chalk": "^1.1.3",
+    "clipboard": "^1.5.15",
     "coveralls": "^2.11.15",
     "css-loader": "^0.26.0",
     "del": "^2.2.2",
@@ -73,6 +74,7 @@
     "html-webpack-plugin": "^2.24.1",
     "isomorphic-style-loader": "^1.1.0",
     "jest-cli": "^17.0.3",
+    "lodash.escape": "^4.0.1",
     "mark-it-down": "^0.3.0",
     "node-sass": "^3.13.0",
     "normalize.css": "^5.0.0",
