--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue": "^2.1.4"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
