--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "clipboard": "^1.5.15",
     "coveralls": "^2.11.15",
     "css-loader": "^0.26.1",
-    "del": "^2.2.2",
     "eslint": "^3.11.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.8.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.1.0",
     "gulp-rename": "^1.2.2",
@@ -76,6 +76,7 @@
     "html-webpack-plugin": "^2.24.1",
     "isomorphic-style-loader": "^1.1.0",
     "jest-cli": "^17.0.3",
+    "lodash.camelcase": "^4.3.0",
     "lodash.escape": "^4.0.1",
     "mark-it-down": "^0.3.0",
     "node-sass": "^3.13.0",
