--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     ],
     "collectCoverageFrom": [
       "src/components/*/index.js"
+    ],
+    "testPathDirs": [
+      "src/"
     ]
   },
   "keywords": [
@@ -42,57 +45,54 @@
   "dependencies": {
     "delegate-to": "^0.1.2",
     "owl-icons": "github:cepave-f2e/owl-icons",
-    "vue": "^2.1.4"
+    "vue": "^2.1.6"
   },
   "devDependencies": {
     "axios": "^0.15.3",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-jest": "^17.0.2",
-    "babel-loader": "^6.2.8",
+    "babel-loader": "^6.2.10",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.2.0",
     "babel-plugin-webpack-loaders": "^0.8.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.1.1",
     "babel-preset-stage-2": "^6.18.0",
     "cash-dom": "^1.3.5",
     "chalk": "^1.1.3",
-    "clipboard": "^1.5.15",
+    "clipboard": "^1.5.16",
     "coveralls": "^2.11.15",
     "css-loader": "^0.26.1",
-    "eslint": "^3.11.1",
+    "eslint": "^3.12.2",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.8.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.1.0",
+    "gulp-clean-css": "^2.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
     "gulp-uglify": "^2.0.0",
     "html-webpack-plugin": "^2.24.1",
     "isomorphic-style-loader": "^1.1.0",
-    "jest-cli": "^17.0.3",
+    "jest-cli": "^18.0.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.escape": "^4.0.1",
     "mark-it-down": "^0.3.0",
-    "node-sass": "^3.13.0",
+    "node-sass": "^4.0.0",
     "normalize.css": "^5.0.0",
-    "owl-ui-style": "github:cepave-f2e/owl-ui-style#v1.0.1",
     "piping": "^1.0.0-rc.3",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "^4.1.0",
     "shelljs": "^0.7.5",
     "style-loader": "^0.13.1",
     "stylelint": "^7.6.0",
     "url-loader": "^0.5.7",
     "vue-router": "^2.1.1",
-    "vue-server-renderer": "^2.1.4",
+    "vue-server-renderer": "^2.1.6",
     "webpack": "2.1.0-beta.25",
-    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.13.2"
   },
   "repository": "https://github.com/cepave-f2e/vue-owl-ui.git",
