--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "babel-node scripts/start",
     "test": "npm run lint && BABEL_DISABLE_CACHE=1 jest --coverage",
     "codecov": "curl -s https://codecov.io/bash | bash",
-    "dev": "babel-node ./scripts/dev",
+    "dev": "webpack-dev-server --hot --inline --config webpack/client --port 3032",
     "dev.ssr": "babel-node ./scripts/dev.ssr",
     "pack.client": "webpack --progress --colors --config webpack/client",
     "build": "npm run build.ui & npm run build.pages",
     "build.ui": "babel-node ./scripts/build.ui",
     "build.pages": "NODE_ENV=production npm run pack.client",
-    "lint": "eslint src & stylelint src/**/*.scss --syntax scss",
+    "lint": "eslint src && stylelint src/**/*.scss --syntax scss",
     "deploy": "npm run publish & npm run publish.pages && babel-node ./scripts/gh-tags",
     "publish": "babel-node ./scripts/github-publish",
     "publish.pages": "babel-node ./scripts/gh-pages-publish"
@@ -57,13 +57,13 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
     "babel-plugin-webpack-loaders": "^0.8.0",
-    "babel-preset-env": "^1.1.4",
+    "babel-preset-env": "^1.1.6",
     "babel-preset-stage-2": "^6.18.0",
     "cash-dom": "^1.3.5",
     "chalk": "^1.1.3",
     "clipboard": "^1.5.16",
     "css-loader": "^0.26.1",
-    "eslint": "^3.12.2",
+    "eslint": "^3.13.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.8.0",
     "express": "^4.14.0",
@@ -74,7 +74,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
     "gulp-uglify": "^2.0.0",
-    "html-webpack-plugin": "^2.25.0",
+    "html-webpack-plugin": "^2.26.0",
     "isomorphic-style-loader": "^1.1.0",
     "jest-cli": "^18.1.0",
     "lodash.camelcase": "^4.3.0",
@@ -91,9 +91,8 @@
     "url-loader": "^0.5.7",
     "vue-router": "^2.1.1",
     "vue-server-renderer": "^2.1.8",
-    "webpack": "2.1.0-beta.25",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.14.0"
+    "webpack": "2.2.0-rc.3",
+    "webpack-dev-server": "2.2.0-rc.0"
   },
   "repository": "https://github.com/cepave-f2e/vue-owl-ui.git",
   "bugs": {
