--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/owl-ui",
   "scripts": {
     "start": "babel-node scripts/start",
-    "test": "npm run lint && BABEL_DISABLE_CACHE=1 jest --coverage",
+    "test": "BABEL_DISABLE_CACHE=1 jest --coverage",
     "codecov": "curl -s https://codecov.io/bash | bash",
     "dev": "webpack-dev-server --hot --inline --config webpack/client --port 3032",
     "dev.ssr": "babel-node ./scripts/dev.ssr",
