--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-owl-ui",
+  "name": "@cepave/owl-ui",
   "version": "0.2.1",
   "description": "OWL UI · Component Design System - Cepave F2E",
   "main": "./dist/owl-ui",
@@ -15,7 +15,7 @@
     "build.pages": "NODE_ENV=production npm run pack.client",
     "lint": "eslint src && stylelint src/**/*.scss --syntax scss",
     "deploy": "npm run publish & npm run publish.pages && babel-node ./scripts/gh-tags",
-    "publish": "babel-node ./scripts/github-publish",
+    "publish": "cd npm && npm publish",
     "publish.pages": "babel-node ./scripts/gh-pages-publish"
   },
   "jest": {
