--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,7 @@ deployment:
       - git config --global user.email "auto_deploy@circleci.com"
       - git config --global user.name "CircleCI"
       - npm run build
+      - echo -e "cepave\n${NPM_PASSWD}\nrwu@cepave.com" | npm login
       - npm run deploy
 
 general:
