--- a/package.json
+++ b/package.json
@@ -4,19 +4,13 @@
   "description": "OWL UI · Component Design System - Cepave F2E",
   "main": "./dist/owl-ui",
   "scripts": {
-    "start": "babel-node scripts/start",
-    "test": "BABEL_DISABLE_CACHE=1 jest --coverage",
-    "codecov": "curl -s https://codecov.io/bash | bash",
-    "dev": "webpack-dev-server --hot --inline --config webpack/client --port 3032",
-    "dev.ssr": "babel-node ./scripts/dev.ssr",
-    "pack.client": "webpack --progress --colors --config webpack/client",
-    "build": "npm run build.ui && npm run build.pages",
-    "build.ui": "babel-node ./scripts/build.ui",
-    "build.pages": "NODE_ENV=production npm run pack.client",
     "lint": "eslint src && stylelint src/**/*.scss --syntax scss",
-    "deploy": "npm run publish && npm run publish.pages && babel-node ./scripts/gh-tags",
-    "publish": "npm publish ./npm --access=public",
-    "publish.pages": "babel-node ./scripts/gh-pages-publish"
+    "test": "BABEL_DISABLE_CACHE=1 jest --coverage",
+    "dev": "webpack-dev-server --hot --inline --config webpack/client --port 3032",
+    "dev.ssr": "babel-node scripts/dev.ssr",
+    "pack.client": "webpack --progress --colors --config webpack/client",
+    "build.ui": "babel-node scripts/build.ui",
+    "build.pages": "NODE_ENV=production npm run pack.client"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
