clean gh pr branch after merge

--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,10 @@ test:
         parallel: true
 
 deployment:
+  devlopment:
+    branch: dev
+    commands:
+      - node scripts/gh-clean-pr
   release:
     branch: master
     commands:
