Change the deployment name: `stage`

--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ test:
         parallel: true
 
 deployment:
-  devlopment:
+  stage:
     branch: dev
     commands:
       - node scripts/gh-clean-pr
