--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.3.2",
@@ -85,8 +85,8 @@
     "url-loader": "^0.5.7",
     "vue-router": "^2.1.1",
     "vue-server-renderer": "^2.1.8",
-    "webpack": "2.2.0-rc.3",
-    "webpack-dev-server": "2.2.0-rc.0"
+    "webpack": "2.2.0",
+    "webpack-dev-server": "2.2.0"
   },
   "repository": "https://github.com/cepave-f2e/vue-owl-ui.git",
   "bugs": {
