--- a/package.json
+++ b/package.json
@@ -57,14 +57,14 @@
     "chalk": "^1.1.3",
     "clipboard": "^1.5.16",
     "css-loader": "^0.26.1",
-    "eslint": "^3.14.1",
+    "eslint": "^3.15.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.3.2",
+    "gulp-clean-css": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
     "gulp-uglify": "^2.0.1",
@@ -78,7 +78,7 @@
     "normalize.css": "^5.0.0",
     "piping": "^1.0.0-rc.3",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^5.0.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.13.1",
     "stylelint": "^7.8.0",
@@ -86,7 +86,7 @@
     "vue-router": "^2.2.0",
     "vue-server-renderer": "^2.1.10",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.2.1"
+    "webpack-dev-server": "^2.3.0"
   },
   "repository": "https://github.com/cepave-f2e/vue-owl-ui.git",
   "bugs": {
