--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/owl-ui",
   "scripts": {
     "lint": "eslint src && stylelint src/**/*.scss --syntax scss",
-    "test": "BABEL_DISABLE_CACHE=1 jest --coverage",
+    "test": "jest --coverage",
     "dev": "webpack-dev-server --hot --inline --config webpack/client --port 3032",
     "dev.ssr": "babel-node scripts/dev.ssr",
     "pack.client": "webpack --progress --colors --config webpack/client",
@@ -13,6 +13,10 @@
     "build.pages": "NODE_ENV=production npm run pack.client"
   },
   "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "test/mock-loader.js",
+      "\\.(s?css)$": "identity-obj-proxy"
+    },
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "\\.s?css$"
@@ -50,7 +54,6 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
-    "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-stage-2": "^6.22.0",
     "cash-dom": "^1.3.5",
@@ -69,6 +72,7 @@
     "gulp-size": "^2.1.0",
     "gulp-uglify": "^2.0.1",
     "html-webpack-plugin": "^2.28.0",
+    "identity-obj-proxy": "^3.0.0",
     "isomorphic-style-loader": "^1.1.0",
     "jest-cli": "^18.1.0",
     "lodash.camelcase": "^4.3.0",
