--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
     "babel-loader": "^6.3.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
-    "babel-preset-env": "^1.1.8",
+    "babel-preset-env": "^1.1.10",
     "babel-preset-stage-2": "^6.22.0",
     "cash-dom": "^1.3.5",
     "chalk": "^1.1.3",
-    "clipboard": "^1.6.0",
-    "css-loader": "^0.26.1",
+    "clipboard": "^1.6.1",
+    "css-loader": "^0.26.2",
     "eslint": "^3.16.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.0",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "extract-text-webpack-plugin": "^2.0.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.3",
@@ -55,7 +55,7 @@
     "html-webpack-plugin": "^2.28.0",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-style-loader": "^1.1.0",
-    "jest-cli": "^19.0.1",
+    "jest-cli": "^19.0.2",
     "lodash.camelcase": "^4.3.0",
     "lodash.escape": "^4.0.1",
     "mark-it-down": "^0.3.0",
@@ -65,9 +65,9 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.2",
     "shelljs": "^0.7.6",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "stylelint": "^7.9.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.8",
     "vue-router": "^2.3.0",
     "vue-server-renderer": "^2.2.1",
     "webpack": "^2.2.1",
