[ComplexQuery] Added `ComplexQuery`

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@cepave/owl-icons": "^1.1.1",
     "delegate-to": "^0.1.4",
+    "lodash.escaperegexp": "^4.1.2",
     "vue": "^2.2.1"
   },
   "devDependencies": {
